name:                rafutils
version:             0.0.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Alexander Foremny
maintainer:          alexanderforemny@gmail.com
-- copyright:           
category:            Console
build-type:          Simple
cabal-version:       >=1.8

executable raflist
  main-is:             List.hs
  hs-source-dirs:      src
  build-depends:       base       == 4.6.*,
                       cmdargs    == 0.10.*,
                       containers == 0.5.*,

                       attoparsec,
                       attoparsec-binary,
                       bytestring,
                       cpu

executable rafextract
  main-is:             Extract.hs
  hs-source-dirs:      src
  build-depends:       base       == 4.6.*,
                       cmdargs    == 0.10.*,
                       containers == 0.5.*,
                       filepath   == 1.3.*,
                       zlib       == 0.5.*,

                       attoparsec,
                       attoparsec-binary,
                       bytestring,
                       cpu

